2008-12-08  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_packet.c
	(ipmiconsole_ipmi_packet_assemble): Add workaround for Intel IPMI
	2.0 situation.

	* common/man/manpage-common-workaround-sol-only-text.man,
	common/man/manpage-common-workaround-text.man: Change text for
	workaround changes.
	
2008-12-05  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_packet.c
	(ipmiconsole_ipmi_packet_assemble): Fix Intel 2.0 workaround.
	
2008-12-04  Albert Chu <chu11@llnl.gov>

	* common/man/manpage-common-workaround-sol-only-text.man,
	common/man/manpage-common-workaround-text.man: Cleanup text.
	
2008-12-04  Diego "Flameeyes" Petten <flameeyes@gmail.com>

	* ipmi-oem/, ipmi-raw/: Fix portability for glibc 2.8.  Remove use
	of ARG_MAX and replace with sysconf call to _SC_ARG_MAX.
	
2008-12-04  Albert Chu <chu11@llnl.gov>

	* bmc-config/: Add documentation on <username-not-set-yet>.
	
2008-12-04  Dave Love  <fx@gnu.org>

	* freeipmi.spec.in: Require /sbin/chkconfig, not chkconfig, to
	work on SuSE.
	
2008-12-03  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/: Document various issues w/ comments.

	* common/src/configtool/: Support CONFIG_USERNAME_NOT_SET_YET
	config flag.

	* bmc-config/src/: Support CONFIG_USERNAME_NOT_SET_YET in various
	fields due to checkout issues with Sun X4140.
	
2008-12-01  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/ipmi_monitoring_sensors.conf.5.pre.in: Fix typos.

2008-12-01  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_7_3.	

2008-11-27  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/src/ipmi-sel-entry.c (ipmi_sel_get_entry): Fix output
	corner case.

	* ipmimonitoring/: Add system ACPI power state and button switch
	interpretations.  Add forgotten bitmasks.  Fix config file option
	names.
	
	* ipmimonitoring/: Add new interpretations, button switch state,
	entity presence device install, processor state.
