@@ -4,6 +4,7 @@ o Support output of "<username-not-set-yet>" in bmc-config for fields
 that require a username to be configured before data may be retrieved.
 o Add Intel IPMI 2.0 workaround for SOL connection in ipmiconsole.
 o Fix Intel IPMI 2.0 workarounds in ipmiconsole.
+o Fix state machine cycle corner case in ipmiconsole/libipmiconsole.
 o Fix Suse build issue in spec file.
 o Fix glibc 2.8 build issues.
 o Fix/clarify minor documentation typos/wording.
